# grab

./: -m  .gitignore  ARCHITECTURE.md  Grab.entitlements  Makefile  Package.swift  Procfile.dev  QUICKSTART.md  README.md  UNIFIED_BUILD.md  build-unified.sh  dev-fast.sh  dev.sh  run_grab.sh  test-integration.sh  watch-pause.sh  watch-resume.sh  watch.sh
.claude/: settings.local.json
.github/workflows/: deploy-landing.yml
Grab/: AppDelegate.swift  GrabApp.swift
Grab.app/Contents/: Info.plist
Grab.app/Contents/MacOS/: Grab
Grab.app/Contents/Resources/Grab Actions.app/Contents/: Info.plist
Grab.app/Contents/_CodeSignature/: CodeResources
Grab/Managers/: CaptureManager.swift  HotkeyManager.swift
Grab/Models/: Capture.swift  ClipboardHistory.swift
Grab/Resources/: Info.plist
Grab/Utilities/: AccessibilityDetector.swift  Extensions.swift  VisionAnalyzer.swift
Grab/Views/: BaseWindow.swift  CaptureEditorView.swift  CaptureEditorWindow.swift  CapturePreviewView.swift  CapturePreviewWindow.swift  CaptureView.swift  CaptureWindow.swift  ClipboardHistoryView.swift  ClipboardHistoryWindow.swift  ClipboardPreviewView.swift  ClipboardPreviewWindow.swift  CommandCenterView.swift  CommandCenterWindow.swift  GalleryView.swift  GalleryWindow.swift  KeyboardHintView.swift  MainWindow.swift  MainWindowView.swift  NanoPastebinView.swift  NanoPastebinWindow.swift
GrabUI/: Package.swift
GrabUI/GrabPreview/GrabPreview/: ContentView.swift  GrabPreviewApp.swift
GrabUI/GrabPreview/GrabPreview.xcodeproj/: project.pbxproj
GrabUI/GrabPreview/GrabPreviewTests/: GrabPreviewTests.swift
GrabUI/GrabPreview/GrabPreviewUITests/: GrabPreviewUITests.swift  GrabPreviewUITestsLaunchTests.swift
GrabUI/Sources/GrabUI/: ClipboardHistory.swift  NanoPastebinView.swift
GrabUI/Tests/GrabUITests/: GrabUITests.swift
docs/: nano-paste.md
grab-actions/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  setup.sh  vite.config.ts
grab-actions/src/: App.tsx  index.css  types.ts
grab-actions/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json  tauri.conf.nosign.json
grab-actions/src-tauri/src/: main.rs
grab-actions/src/actions/: coreActions.ts  index.ts
grab-actions/src/components/: ActionView.tsx  CaptureCard.tsx  CaptureGrid.tsx  DeepLinkExample.tsx  Header.tsx  LoadingSkeleton.tsx  Settings.tsx
grab-actions/src/components/ui/: badge.tsx  button.tsx  input.tsx
grab-actions/src/lib/: utils.ts
grab-landing/: DEPLOY.md  nano-pastebin.tsx  next.config.ts  package.json  pnpm-lock.yaml
grab-landing/app/: page.tsx
scripts/: build-app.sh  quick-release.sh  release.sh
