[package]
name = "grab-actions"
version = "0.1.0"
description = "A Tauri app for actions and workflows with Grab captures"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "window-hide", "window-unminimize", "window-request-user-attention", "window-unmaximize", "window-print", "window-show", "window-set-skip-taskbar", "window-center", "window-set-size", "window-set-focus", "window-minimize", "window-maximize", "window-start-dragging", "window-close", "window-set-max-size", "window-set-icon", "window-set-title", "window-set-decorations", "window-set-resizable", "window-set-min-size", "window-set-always-on-top", "window-set-fullscreen", "window-set-position", "fs-write-file", "dialog-open", "fs-create-dir", "shell-open", "path-all", "fs-read-dir", "fs-read-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
base64 = "0.21"
url = "2.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
