[package]
name = "grab-actions"
version = "0.1.0"
description = "A Tauri app for actions and workflows with Grab captures"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "window-start-dragging", "window-print", "window-unminimize", "window-set-position", "window-hide", "window-set-max-size", "window-request-user-attention", "window-set-decorations", "window-set-fullscreen", "window-set-title", "window-center", "window-show", "window-set-size", "window-set-min-size", "window-close", "window-set-icon", "window-maximize", "window-unmaximize", "window-minimize", "window-set-focus", "window-set-always-on-top", "window-set-skip-taskbar", "window-set-resizable", "fs-write-file", "dialog-open", "fs-create-dir", "shell-open", "path-all", "fs-read-dir", "fs-read-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
base64 = "0.21"
url = "2.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
