[package]
name = "grab-actions"
version = "0.1.0"
description = "A Tauri app for actions and workflows with Grab captures"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "window-start-dragging", "window-hide", "window-set-resizable", "window-set-size", "window-set-decorations", "window-minimize", "window-set-always-on-top", "window-close", "window-unminimize", "window-unmaximize", "window-set-fullscreen", "window-set-focus", "window-set-position", "window-set-title", "window-set-min-size", "window-center", "window-request-user-attention", "window-set-max-size", "window-maximize", "window-show", "window-set-icon", "window-print", "window-set-skip-taskbar", "fs-write-file", "dialog-open", "fs-create-dir", "shell-open", "path-all", "fs-read-dir", "fs-read-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
base64 = "0.21"
url = "2.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
